fixing alignment

--- a/src/main/resources/templates/portal.css
+++ b/src/main/resources/templates/portal.css
@@ -10,7 +10,6 @@
 }
 body {
       display: flex;
-      background-image: url("purplelibrary.jpg");
 }
 
 .sidebar {
@@ -127,4 +126,8 @@ body {
 }
 .search--box i:over{
     transform: scale(1.2);
+}
+.borrowBook{
+    border-radius:50px;
+    text-align:centre;
 }
